first big push | update 1

--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -1,13 +1,12 @@
 ---
-title: "Talk 2 on Relevant Topic in Your Field"
+title: "Community detection in networks by dynamical optimal transport formulation"
 collection: talks
 type: "Talk"
 permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+venue: "2023 IMPRS-IS bootcamp"
+date: 2023-09-15
+location: "Stuttgart, Germany"
 ---
 
-[More information here](http://example2.com)
+[More information here](https://imprs.is.mpg.de/events/imprs-is-2023-boot-camp)
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
