--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,10 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Optimal transport in Networks"
 collection: talks
 type: "Talk"
 permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, CA, USA"
+venue: "Institute of Computer Science, University of Hildesheim"
+date: 2025-02-26
+location: "Hildesheim, Germany"
 ---
 
-This is a description of your talk, which is a markdown file that can be all markdown-ified like any other post. Yay markdown!
