--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -1,11 +1,10 @@
 ---
-title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
+title: "Optimal transport with constraints: from mirror descent to classical mechanics"
 collection: talks
 type: "Conference proceedings talk"
 permalink: /talks/2014-03-01-talk-3
-venue: "Testing Institute of America 2014 Annual Conference"
-date: 2014-03-01
-location: "Los Angeles, CA, USA"
+venue: "NetSciX 2024 - International School and Conference on Network Science"
+date: 2024-01-24
+location: "Ca' Foscari University, Venice, Italy"
 ---
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
