--- a/files/bibtex1.bib
+++ b/files/bibtex1.bib
@@ -1,10 +1,10 @@
-@article{Alice2023example,
-    title={An Example Article},
-    author={Alice, Bob and Charlie},
-    journal={Journal of Examples},
-    volume={12},
-    number={3},
-    pages={123--456},
-    year={2023},
-    publisher={Example Publisher}
+@article{ibrahim2021optimal,
+	title={Optimal transport in multilayer networks for traffic flow optimization},
+	author={Ibrahim, Abdullahi Adinoyi and Lonardi, Alessandro and Bacco, Caterina De},
+	journal={Algorithms},
+	volume={14},
+	number={7},
+	pages={189},
+	year={2021},
+	publisher={MDPI}
 }
