update 2: added blogs, news | more changes coming...

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,17 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: "The Difference Between Type and Class"
+layout: single
+# optional: keep a local permalink if you still want an internal page
 permalink: /posts/2012/08/blog-post-1/
+
+# ↓  new line — this becomes the clickable title
+link: https://www.baeldung.com/cs/type-vs-class-programming
+
+show_date: false      # ← hides the Published: line
+read_time: false      # ← (optional) hides the “x minute read” line
+
 tags:
   - cool posts
   - category1
   - category2
 ---
-
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
-
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
