--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -1,20 +1,13 @@
 ---
-title: 'Blog Post number 3'
-date: 2014-08-14
+title: 'How to Draw Work Breakdown Structures with LaTeX/TikZ'
+date: 2020-08-14
 permalink: /posts/2014/08/blog-post-3/
+link: https://www.baeldung.com/cs/latex-tikz-draw-wbs
+
+show_date: false      # ← hides the Published: line
+read_time: false  
 tags:
   - cool posts
   - category1
   - category2
 ---
-
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool. 
-
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
