--- a/_posts/2015-08-14-blog-post-14.md
+++ b/_posts/2015-08-14-blog-post-14.md
@@ -1,8 +1,8 @@
 ---
-title: 'Multiple Figures With the Same Caption in LaTeX'
+title: 'Removing the Last Page of a PDF File From Command Line'
 date: 2023-08-14
 permalink: /posts/2012/08/blog-post-4/
-link: https://www.baeldung.com/cs/latex-subfigures
+link: https://www.baeldung.com/linux/pdf-remove-last-page
 
 show_date: false      # ← hides the Published: line
 read_time: false  
