--- a/_posts/2015-08-14-blog-post-15.md
+++ b/_posts/2015-08-14-blog-post-15.md
@@ -1,9 +1,9 @@
 ---
-title: 'Multiple Figures With the Same Caption in LaTeX'
-date: 2023-08-14
+title: 'Optimization of the Sizes of PDF Files on Linux'
+date: 2023-12-14
 permalink: /posts/2012/08/blog-post-4/
-link: https://www.baeldung.com/cs/latex-subfigures
-
+link: https://www.baeldung.com/linux/pdf-compress
+# hidden: true
 show_date: false      # ← hides the Published: line
 read_time: false  
 tags:
