--- a/_posts/2015-08-14-blog-post-6.md
+++ b/_posts/2015-08-14-blog-post-6.md
@@ -1,8 +1,8 @@
 ---
-title: 'Multiple Figures With the Same Caption in LaTeX'
+title: 'How to Scale Equations in LaTeX Using \resizebox'
 date: 2023-08-14
 permalink: /posts/2012/08/blog-post-4/
-link: https://www.baeldung.com/cs/latex-subfigures
+link: https://www.baeldung.com/cs/latex-scale-equations-resizebox
 
 show_date: false      # ← hides the Published: line
 read_time: false  
